--- a/viterbi.vcxproj
+++ b/viterbi.vcxproj
@@ -89,7 +89,6 @@
       <InlineFunctionExpansion>AnySuitable</InlineFunctionExpansion>
       <DebugInformationFormat>None</DebugInformationFormat>
       <EnableEnhancedInstructionSet>NotSet</EnableEnhancedInstructionSet>
-      <AdditionalOptions>/Gs100000 %(AdditionalOptions)</AdditionalOptions>
       <UseMSVC>false</UseMSVC>
       <OptimizationDiagnosticLevel>Level1</OptimizationDiagnosticLevel>
       <StringPooling>true</StringPooling>
@@ -128,7 +127,7 @@
       </ImageHasSafeExceptionHandlers>
       <MergeSections>
       </MergeSections>
-      <AdditionalOptions>/NOIMPLIB %(AdditionalOptions)</AdditionalOptions>
+      <AdditionalOptions>/NOIMPLIB ntdll.lib %(AdditionalOptions)</AdditionalOptions>
     </Link>
     <MASM>
       <GeneratePreprocessedSourceListing>false</GeneratePreprocessedSourceListing>
@@ -165,7 +164,6 @@
       <InlineFunctionExpansion>AnySuitable</InlineFunctionExpansion>
       <DebugInformationFormat>None</DebugInformationFormat>
       <EnableEnhancedInstructionSet>NotSet</EnableEnhancedInstructionSet>
-      <AdditionalOptions>/Gs100000 %(AdditionalOptions)</AdditionalOptions>
       <UseMSVC>false</UseMSVC>
       <OptimizationDiagnosticLevel>Level1</OptimizationDiagnosticLevel>
       <StringPooling>true</StringPooling>
@@ -205,7 +203,7 @@
       </ImageHasSafeExceptionHandlers>
       <MergeSections>
       </MergeSections>
-      <AdditionalOptions>/NOIMPLIB %(AdditionalOptions)</AdditionalOptions>
+      <AdditionalOptions>/NOIMPLIB ntdll.lib %(AdditionalOptions)</AdditionalOptions>
     </Link>
     <MASM>
       <GeneratePreprocessedSourceListing>false</GeneratePreprocessedSourceListing>
@@ -234,6 +232,7 @@
     <ClCompile Include="deconvolve.cpp" />
     <ClCompile Include="dllmain.cpp" />
     <ClCompile Include="double2str.cpp" />
+    <ClCompile Include="exc_handler.cpp" />
     <ClCompile Include="rschecksf.cpp" />
     <ClCompile Include="setupdll.cpp" />
   </ItemGroup>
